# timecave

./: .gitignore  404.html  ChangeLog.txt  Contributors.txt  README.md  TimeSeries.yml  id_ed25519  id_ed25519.pub  index.html  mkdocs.yml  objects.inv  pyproject.toml  refs.bib  sitemap.xml  test_job.sh
.github/workflows/: docs.yml
API_ref/: index.html
API_ref/data_characteristics/: index.html
API_ref/data_generation/: index.html
API_ref/metrics/: index.html
API_ref/utils/: index.html
API_ref/validation_methods/: index.html
ChangeLog/: index.html
about/: index.html
docs/: ChangeLog.md  about.md  exp.txt  index.md  starters.md
docs/API_ref/: data_characteristics.md  index.md  metrics.md  utils.md
examples/: test_preq.ipynb
experiments/: ambiente.py  data_preprocessing.ipynb  data_preprocessing_cont.ipynb  dataframe_checks.py  docstr.txt  eco_financas.py  energia.py  eng_ciencias.py  ereals.py  experiment_utils.py  experiments.ipynb  final_results.ipynb  friedman_test.ipynb  graphic_results.ipynb  lstm_model.py  markov_cv.py  meteorologia.py  model_utils.py  models.py  post_processing.py  processing_results.ipynb  run_experiments.py  s1.py  s2.py  s3.py  sarsim_accidental-deaths-in-usa.py  saude.py  synthetic_data.ipynb  test.ipynb  test_hpc.py  test_run_experiments.ipynb  test_sktime.ipynb  test_tsfel.ipynb  transportes.py
experiments/results/: real_data_test.csv  stats_total__2024_05_28__16_18_43.csv  stats_val__2024_05_29__10_31_42.csv  syn_data_test.csv  time_series_stats.csv
jobs/: ambiente_job.sh  ereals_job.sh  meteorologia_job.sh  s1_job.sh  s2_job.sh  s3_job.sh  saude_job.sh  test_job.sh  transportes_job.sh
papers/.ppt/: TimeSeriesCV.pptx  TimeSeriesCV_03052024.pptx  TimeSeriesCV_07062024.pptx  TimeSeriesCV_08042024.pptx  TimeSeriesCV_10052024.pptx  TimeSeriesCV_11042024.pptx  TimeSeriesCV_14042024.pptx  TimeSeriesCV_14062024.pptx  TimeSeriesCV_15032024 - Copy.pptx  TimeSeriesCV_15032024.pptx  TimeSeriesCV_17052024.pptx  TimeSeriesCV_19042024.pptx  TimeSeriesCV_21062024.pptx  TimeSeriesCV_24052024.pptx  TimeSeriesCV_26042024.pptx  TimeSeriesCV_26072024.pptx  TimeSeriesCV_28022024.pptx  TimeSeriesCV_31052024.pptx  cvtimeseries.pptx
search/: search_index.json
starters/: index.html
tests/examples/: test_examples.py
tests/unit/: test_CV.py  test_OOS.py  test_data_characteristics.py  test_markov.py  test_metrics.py  test_prequential.py  test_time_series_functions.py  test_time_series_generation.py  test_utils.py  test_weights.py
timecave/: data_characteristics.py  utils.py  validation_strategy_metrics.py
timecave/data_generation/: __init__.py  _utils.py  frequency_modulation.py  time_series_functions.py  time_series_generation.py
timecave/validation_methods/: CV.py  OOS.py  base.py  markov.py  prequential.py  weights.py
tsvalidation/: data_characteristics.py  data_generation.py  utils.py  validation_strategy_metrics.py
tsvalidation/data_generation/: _utils.py  utils.py  (+5 more)
(+11847 files in other folders)
