[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tsvalidation"
version = "0.1.1"
authors=[
    {name = "Miguel Santos Loureiro", email = "miguel.santos.loureiro@tecnico.ulisboa.pt"},
    {name = "Beatriz Pereira Lourenço", email = "beatriz.p.lourenco@tecnico.ulisboa.pt"}
]
description = "Model validation methods for time series forecasting."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["time-series", "validation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education"
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.3",
    "pandas>=2.1.4",
    "matplotlib>=3.8",
    "tsfel==0.1.7"
]

[tool.setuptools.packages.find]
include=["tsvalidation*"]