[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "timecave"
version = "0.3.0"
authors=[  
    {name = "Miguel Santos Loureiro", email = "miguel.santos.loureiro@tecnico.ulisboa.pt"},
    {name = "Beatriz Pereira Lourenço", email = "beatriz.p.lourenco@tecnico.ulisboa.pt"}
]
description = "Model validation methods for time series forecasting."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["time-series", "validation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education"
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.3",
    "pandas>=2.1.4",
    "matplotlib>=3.8",
    "tsfel==0.1.7"
]

[project.optional-dependencies]
dev = [
    "black>=24.4.2",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.30",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocstrings-python>=1.10.5",
    "mkdocs-autorefs>=1.0.1",
    "pymdown-extensions>=10.8.1"
]
exp = [
    "tensorflow>=2.16.1",
    "keras>=3.3.3",
    "scikit-learn>=1.4.0",
    "statsmodels>=0.14.0"
]

[project.urls]
repository = "https://github.com/MiguelLoureiro98/timecave"

[tool.setuptools.packages.find]
include = ["timecave*"]